[gd_scene load_steps=2 format=2]

[ext_resource path="res://DialoguePlayer.gd" type="Script" id=1]

[node name="DialoguePlayer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.323517
margin_top = 0.323532
margin_right = -0.323486
margin_bottom = 0.323547
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 103.607
margin_top = 414.426
margin_right = 905.607
margin_bottom = 586.426

[node name="TextEdit" type="TextEdit" parent="Panel"]
margin_right = 798.0
margin_bottom = 173.0

[node name="missionText" type="TextEdit" parent="Panel"]
margin_left = -1.0
margin_top = -91.0
margin_right = 103.0
margin_bottom = -6.0
rect_scale = Vector2( 3.08, 1 )

[node name="Mission1 Button" type="Button" parent="."]
margin_left = 28.6331
margin_top = 32.7
margin_right = 173.633
margin_bottom = 108.7
text = "Mission 1"

[node name="Mission2 Button" type="Button" parent="."]
margin_left = 195.0
margin_top = 34.0
margin_right = 344.0
margin_bottom = 109.0
text = "Mission 2 "

[node name="Mission3 Button" type="Button" parent="."]
margin_left = 365.354
margin_top = 33.0779
margin_right = 513.354
margin_bottom = 108.078
text = "Mission 3"
[connection signal="pressed" from="Mission1 Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Mission2 Button" to="." method="_on_Mission2_Button_pressed"]
[connection signal="pressed" from="Mission3 Button" to="." method="_on_Mission3_Button_pressed"]
